--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <title>Stencil Component Starter</title>
 
-  <script type="module" src="/build/css3pattern.esm.js"></script>
-  <script nomodule src="/build/css3pattern.js"></script>
+  <script type="module" src="./build/css3pattern.esm.js"></script>
+  <script nomodule src="./build/css3pattern.js"></script>
   <style>
     body > *:not(.patterns) {
       margin-left: 15px;
