update demo page with link to GitHub

--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,9 @@
     </tr>
   </table>
 
+  <h2>Source Code</h2>
+  <p>Source code can be found on <a href="https://github.com/jwillmer/pattern-component">GitHub: jwillmer/pattern-component</a></p>
+
   <template id="patternObject">
     <tr>
       <td></td>
